# Smodal

./: .dockerignore  .env  .replit  AWS Elastic Beanstalk Deploynent  Dockerfile  Dockerfile.app  Dockerfile.deploy  Dockerrun.aws.json  Import Socket.py  Procfile  README.md  StudentName_STUDENTID.txt  Test  ai_config.py  app.js  caching.py  compose-spec.json  conflict_resolution.py  deploy.py  digitalocean.py  docker-compose.yml  dockerfile.yml  error_pages.py  frontend.js  html_template_util.py  kubectl_nodes.py  lambda_functions.py  log build failed  logging.py  main.py  manage.py  manage2.py  modaltokai-kubeconfig.yaml  models.py  my_logging.py  nginx.conf  package-lock.json  package.json  pull_request_editor.py  pyproject.toml  (+10 more)
.github/workflows/: deploy  digger_workflow.yml  docker-modal-tokai-image.yml  main.yml  mobsf.yml
api/: banking.py  cloning.py
data_sources/Cluster0/: default_rule.json
db/: documents.py  encryption.py
django_project/: asgi.py  settings.py  wsgi.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
migrations/: 0002_add_openaiintegration.py
modaltokai/: __init__.py  admin.py  apps.py  models.py  monitoring.py  tests.py  urls.py  views.py
prototype-main/: .env  .gitignore  Procfile  README.md  app.js  requirements.txt  shared_dependencies.md  ui.py
prototype-main/modal.tokai/: backend_api.js
prototype-main/src/: .env  NLP.py  api_integration.py  clone_training.py  config.py  constants.py  conversation.py  database.py  exceptions.py  external_APIs.py  main.py  networking.py  payment_processing.py  settings.py  social_media_integration.py  speech_recognition.py  user_interface.py  utils.py  widgets.py
prototype-main/src/tests/: test_NLP.py  test_api_integration.py  test_clone_training.py  test_database.py  test_external_APIs.py  test_main.py  test_networking.py  test_payment_processing.py  test_social_media_integration.py  test_speech_recognition.py  test_user_interface.py
static/css/: style.css
static/js/: takeover.js
templates/: app.py  app_front.html  banking_api.html  clone_training.html  database_storage.html  deploy_server.py  footer.html  git_pull_request_18.sh  index.html  menu_page.html  modal.html  modal.py  nav.html  new_menu.html  page3.html  page4.html  page5.html  preview_page.html  pull_request_editor.py  title.html  watch_page.html
test/: Import SocketTest.py  cachingTest.py  conflict_resolutionTest.py  deployTest.py  digitaloceanTest.py  error_pagesTest.py  frontendTest.js  html_template_utilTest.py  loggingTest.py  mainTest.py  manageTest.py  routesTest.py  sale_itemsTest.py  social_media_botTest.py  testsTest.py  watch_page_modalTest.py
