[tool.poetry]
name = "modal.tokai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "^1.24.0"
replit = "^3.7.1" # Updated to the latest version
Django = "^4.0.8"
urllib3 = "^1.27.0"
requests = "2.33.0"
bootstrap4 = "^0.1.7"
pytest = "^6.2.5"
pytest-django = "^4.2.0"
django-debug-toolbar = "^3.2.2"
logging = "^0.5.1.2"
caching = "^1.1.1"
django-allauth = "^0.47.0"
django-crispy-forms = "^1.14.0"
django-environ = "^0.7.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.7.0"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.6.0"}
pytest = "^7.1.0"
selenium = "^4.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"