[tool.poetry]
name = "modal.tokai"
version = "0.1.1"  # Incremented minor version after dependency update
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"  # Current stable versions used
numpy = "^1.24.3"  # Update to latest stable version
replit = "^3.8.2"  # Update to latest stable version
Django = "^4.1.1"  # Update to latest stable version
urllib3 = "^1.27.4"  # Update to latest stable version
requests = "^2.34.0"  # Update to latest stable version
bootstrap4 = "^0.1.7"  # Current stable version used
pytest = "^7.1.0"  # Update to latest stable version
pytest-django = "^4.5.3"  # Update to latest stable version
django-debug-toolbar = "^3.3.1"  # Update to latest stable version
logging = "^0.5.1.2"  # Current stable version used
caching = "^1.1.1"  # Current stable version used
django-allauth = "^0.48.0"  # Update to latest stable version 
django-crispy-forms = "^1.14.4"  # Update to latest stable version 
django-environ = "^0.7.2"  # Update to latest stable version

[tool.poetry.dev-dependencies]
debugpy = "^1.7.2"  # Update to latest stable version
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.6.8"}  # Update to latest stable version
selenium = "^4.8"  # Update to latest stable version

[build-system]
requires = ["poetry-core>=1.0.1"]  # Update to latest stable version
build-backend = "poetry.core.masonry.api"