[tool.poetry]
name = "modal.tokai"
version = "0.1.2"  # Incremented minor version after dependency update
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # Updated to latest stable version
numpy = "^1.24.4"  # Updated to latest stable version
replit = "^3.8.3"  # Updated to latest stable version
Django = "^4.1.2"  # Updated to latest stable version
urllib3 = "^1.28.0"  # Updated to latest stable version
requests = "^2.34.1"  # Updated to latest stable version
bootstrap4 = "^0.1.8"  # Updated to latest stable version
pytest = "^7.2.0"  # Updated to latest stable version
pytest-django = "^4.5.4"  # Updated to latest stable version
django-debug-toolbar = "^3.4.0"  # Updated to latest stable version
logging = "^0.5.2"  # Updated to latest stable version
caching = "^1.2.0"  # Updated to latest stable version
django-allauth = "^0.48.1"  # Updated to latest stable version
django-crispy-forms = "^1.14.5"  # Updated to latest stable version
django-environ = "^0.8.0"  # Updated to latest stable version

[tool.poetry.dev-dependencies]
debugpy = "^1.8.0"  # Updated to latest stable version
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.6.10"}  # Updated to latest stable version
selenium = "^4.8.1"  # Updated to latest stable version

[build-system]
requires = ["poetry-core>=1.0.2"]  # Updated to latest stable version
build-backend = "poetry.core.masonry.api"